[gd_scene load_steps=6 format=3 uid="uid://ygva65dxboxu"]

[ext_resource type="Script" path="res://Enemy/scripts/Damageable.gd" id="1_13s0s"]
[ext_resource type="Script" path="res://Boss/script/Boss.gd" id="1_wrp6m"]
[ext_resource type="PackedScene" uid="uid://0sgh0a2li3rv" path="res://Enemy/nodes/Turret.tscn" id="2_yfugc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tn17s"]
radius = 28.0
height = 82.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnwwd"]
size = Vector2(817, 83)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_wrp6m")

[node name="Turret" parent="." instance=ExtResource("2_yfugc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_tn17s")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bnwwd")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("1_13s0s")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="pos1" type="Node2D" parent="."]
position = Vector2(-74, 98)

[node name="pos2" type="Node2D" parent="."]
position = Vector2(-28, 123)

[node name="pos3" type="Node2D" parent="."]
position = Vector2(34, 124)

[node name="pos4" type="Node2D" parent="."]
position = Vector2(89, 100)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.28

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="Rest" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Rest" to="." method="_on_rest_timeout"]
